# mycurrency

./: .env.example  README.md  initial_data.json  mycurrency.postman_collection.json  pyproject.toml
core/: admin.py  settings.py  urls.py
currency/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
currency/management/commands/: add_real_historical_data.py  add_test_historical_data.py
currency/migrations/: 0001_initial.py  0002_alter_currency_id_alter_currencyexchangerate_id_and_more.py
currency/providers/: __init__.py  currency_beacon.py  mock.py
currency/templates/admin/: convert.html
