[project]
name = "mycurrency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "django>=5,<6",
    "django-environ>=0.13.0",
    "djangorestframework>=3.16.1",
    "gevent>=25.9.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
